<resources>
    <string name="app_name">RockPaperScissors_final</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="instructions_select_rock_paper_or_scissors_to_play">Instructions: select rock, paper or scissors to play.</string>
    <string name="your_all_time_statistics">Your all time statistics</string>
    <string name="win">Win:</string>
    <string name="draw">Draw:</string>
    <string name="lose">Lose:</string>
    <string name="win_lose">Win / Lose</string>
    <string name="v_s">V.S.</string>
    <string name="computer_history">computer</string>
    <string name="you_history">you</string>
    <string name="computer_wins">Computer Wins!</string>
    <string name="date">date</string>
    <string name="v_s_history">V.S.</string>
    <string name="computer">computer</string>
    <string name="you">you</string>
    <string name="delete">Delete</string>
    <string name="delete_games">Delete</string>
    <string name="back">back</string>
</resources>
