<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/instructions_select_rock_paper_or_scissors_to_play"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="15dp"
        android:layout_marginBottom="16dp"
        android:background="#009688"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/your_all_time_statistics"
        app:layout_constraintBottom_toTopOf="@+id/tvWin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/win"
        app:layout_constraintBottom_toTopOf="@+id/tvWinLose"
        app:layout_constraintEnd_toStartOf="@+id/tvDraw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="32dp"
        android:text="@string/draw"
        app:layout_constraintBottom_toTopOf="@+id/tvWinLose"
        app:layout_constraintEnd_toStartOf="@+id/tvLose"
        app:layout_constraintStart_toEndOf="@+id/tvWin" />

    <TextView
        android:id="@+id/tvLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="32dp"
        android:text="@string/lose"
        app:layout_constraintBottom_toTopOf="@+id/tvWinLose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvDraw" />

    <TextView
        android:id="@+id/tvWinLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/win_lose"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:background="#009688"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/ivYou"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="18dp"
        android:background="#009688"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="170dp"
        android:fontFamily="serif"
        android:text="@string/v_s"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/ivPaper"
        app:layout_constraintEnd_toStartOf="@+id/ivYou"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="116dp"
        android:text="@string/computer"
        app:layout_constraintBottom_toTopOf="@+id/ivRock"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="116dp"
        android:text="@string/you"
        app:layout_constraintBottom_toTopOf="@+id/ivScissor"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="107dp"
        android:layout_height="95dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="16dp"
        android:background="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivScissor"
        app:layout_constraintStart_toEndOf="@+id/ivRock"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="107dp"
        android:layout_height="95dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="16dp"
        android:background="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivPaper"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/ivScissor"
        android:layout_width="107dp"
        android:layout_height="95dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        android:background="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPaper"
        app:srcCompat="@drawable/scissors" />

</androidx.constraintlayout.widget.ConstraintLayout>
